<resources>
    <string name="app_name">Samsar</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="home">Jobber</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="verification_number">Verification code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="select_post_photos">Select Post Photos</string>
    <string name="Publishing">Publishing</string>
    <string name="rates">rates</string>
    <string name="publish">Publish</string>
    <string name="google_maps_key">AIzaSyCdsBzQrHiM6zAfQuS5XUrkQY96gcN6CX0</string>
    <string name="tap_on_mic">Tab on mic</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dm_developments_2017_all_rights_reserved">© DM DEVELOPMENTS 2017. ALL RIGHTS RESERVED.</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="broker">Broker</string>
    <string name="user">User"      "</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="email_address">Email address"  " :</string>
 <string name="phone_number_acc">phone number"   " :</string>
          <string name="address">Address"        " :</string>
           <string name="gender">Gender"         " :</string>
    <string name="account_settings">" "Account settings</string>
    <string name="personal_information">Personal information</string>
    <string name="support">" "Support</string>
    <string name="get_help">Get help</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="terms_and_service">Terms and service</string>
    <string name="timeline">Timeline</string>
    <string name="profile">Profile</string>
    <string name="voice_control">Voice Control</string>
    <string name="clients_requests">Clients Requests</string>
    <string name="brokers">Brokers</string>
    <string name="chat">Chat</string>
    <string name="invitation">Invitation</string>
    <string name="favorites">Favorites</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="multi_option_filter">Multi Option Filter</string>
    <string name="filter_by_name">Filter by Name</string>
    <string name="reservations">Reservations</string>
    <string name="price">Price</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="pinding">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="View_Location">View Location</string>
    <string name="Call_him">Call him</string>
    <string name="Delete_Request">Delete Request</string>
    <string name="Menu">Menu</string>
    <string name="Delete_Post">Delete Post</string>
    <string name="Report">Report</string>
    <string name="Book_now">Book now</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="type_of_product">Type of Product</string>
    <string name="flats">flats</string>
    <string name="lands">Lands</string>
    <string name="all">All</string>
    <string name="ownership_type">Ownership type</string>
    <string name="rent">Rent</string>
    <string name="conveyance">Conveyance</string>
    <string name="country">Country</string>
    <string name="filter_now">Filter Now</string>
    <string name="add_location">Add Location</string>
    <string name="price_publish">price $</string>
    <string name="request_verification_mark">Request verification mark</string>
    <string name="rate_account">Rate Account</string>
    <string name="write_reason_to_request_this_feature">Write reason To request this feature</string>
    <string name="send_the_request">Send the request</string>

</resources>
