<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_timeline"
        android:enabled="true"
        android:icon="@drawable/ic_view_day_black_24dp"
        android:title="@string/timeline"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_dates"
        android:enabled="true"
        android:icon="@drawable/ic_insert_invitation_black_24dp"
        android:title="@string/reservations"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_voice_icon"
        android:enabled="true"
        android:icon="@drawable/ic_mic_black_24dp"
        android:title="@string/rates"
        app:showAsAction="ifRoom"/>
</menu>