<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/empty">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:text="Filter Products"
                android:textSize="18sp"
                android:textColor="#000"
                />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal"
                android:text="@string/price"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <EditText
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/from"
                    android:textSize="15dp"
                    android:textColor="#000"
                    android:id="@+id/txt_price_from"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_marginHorizontal="20dp"
                    android:id="@+id/txt_price_to"
                    android:layout_marginLeft="20dp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/to"
                    android:textSize="15dp"
                    android:textColor="#000"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"/>
            </LinearLayout>


            <TextView
                android:id="@+id/text_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal"
                android:text="@string/type_of_product"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
                android:id="@+id/radio_group_type">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flats"
                    android:textStyle="bold"
                    android:id="@+id/radio_flats"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lands"
                    android:textStyle="bold"
                    android:id="@+id/radio_land"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textStyle="bold"
                    android:id="@+id/radio_All_type"/>
            </RadioGroup>


        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                >


                <TextView
                    android:id="@+id/text_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ownership_type"
                    android:textColor="#000"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp"
                    android:id="@+id/radio_group_owner">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rent"
                        android:textStyle="bold"
                        android:id="@+id/radio_rent_type"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/conveyance"
                        android:textStyle="bold"
                        android:id="@+id/radio_conveyance"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        android:textStyle="bold"
                        android:id="@+id/radio_All"/>
                </RadioGroup>
                <TextView
                    android:id="@+id/text_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/country"
                    android:textColor="#000"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="277dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/login_button_bk"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spin_search"
                        android:layout_width="247dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/mtoolbar"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/login_button_bk"
                        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                        />
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_expand_more_black"
                        android:id="@+id/image_icon"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/btn_filter"
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_height="40dp"
                    android:text="@string/filter_now"
                    android:background="@drawable/login_button_bk"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    />
                <TextView
                    android:padding="10dp"
                    android:id="@+id/close"
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_height="40dp"
                    android:text="@string/close"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/login_button_bk"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>