<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:backgroundTint="#292929">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:textColorHint="#ffff"
            android:theme="@style/parent"

            >
            <EditText
                android:id="@+id/editTextName"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Name"
                android:textColorHint="#fff"
                android:textColor="@color/floatColor"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:textColorHint="#ffff"
            android:theme="@style/parent">
            <EditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"
                android:textColor="@color/floatColor"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:textColorHint="#ffff"
            android:theme="@style/parent">
            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/login_password_hint"
                android:textColor="@color/floatColor"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:textColorHint="#ffff"
            android:theme="@style/parent">
            <EditText
                android:id="@+id/editTextConfirmPassword"
                style="@style/modifiedEditText"
                android:hint="Confirm Password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/floatColor"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Register"
            android:textColor="#000"
            android:id="@+id/btn_register"
            />

        <TextView
            style="@style/parent"
            android:onClick="loginLink"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</android.support.v7.widget.CardView>
